--- a/pages/index.css
+++ b/pages/index.css
@@ -18,4 +18,4 @@
 @import url(../blocks/element/__box/element__box.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url();
+@import url(../blocks/content/content.css);
