--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -1,4 +1,6 @@
 .element__img {
-    max-width: 282px;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
     border-radius: 10px 10px 0 0;
 }
