--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,3 +5,9 @@
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
     gap: 20px 17px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 620px) {
+    .elements {
+        gap: 20px;
+    }
+}
