--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,10 @@
     max-width: 142px;
     max-height: 33px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 420px) {
+    .header__logo {
+        max-width: 103.74px;
+        max-height: 24.4px;
+    }
+}
