--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,10 @@
     padding-bottom: 41px;
     border-bottom: 1px solid rgb(84, 84, 84, 0.7);
 }
+
+@media screen and (min-width: 320px) and (max-width: 920px) {
+    .header {
+        padding-bottom: 31.6px;
+        padding-left: 27px;
+    }
+}
