--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,3 +4,9 @@
     padding: 45px 0 60px;
     font-family: "Inter", Arial, sans-serif;
 }
+
+@media screen and (min-width: 320px) and (max-width: 420px) {
+    .page {
+        padding: 28px 0 36px;
+    }
+}
