--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,9 +1,22 @@
 .profile__button-add {
+    width: 150px;
+    height: 50px;
+    background-image: url(../../../images/button-add.svg);
     cursor: pointer;
-    margin-left: 244px;
     transition: all 1s ease;
+    border-radius: 2px;
+    background-color: black;
+    border: 2px solid #FFFFFF;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .profile__button-add:hover {
     opacity: 0.6;
+}
+
+@media screen and (min-width: 320px) and (max-width: 720px) {
+    .profile__button-add {
+        width: 100%;
+    }
 }
