--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,7 +1,9 @@
 .profile__info {
+    max-width: 336px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     gap: 16px 18px;
-    align-items: end;
+    align-items: baseline;
+
 }
