--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -9,3 +9,14 @@
     grid-column: 1/1;
     grid-row: -1/2;
 }
+
+@media screen and (min-width: 320px) and (max-width: 420px) {
+    .profile__subtitle {
+        font-family: Inter;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+    }
+}
