--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -9,3 +9,13 @@
     grid-column: 1/1;
     grid-row: 1/1;
 }
+
+@media screen and (min-width: 320px) and (max-width: 420px) {
+    .profile__title {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 27px;
+        line-height: 33px;
+        text-align: center;
+    }
+}
