--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,7 +1,17 @@
 .profile {
-    display: flex;
+    display: grid;
     max-width: 880px;
     margin: 0 auto;
     padding: 40px 0 51px;
+    grid-template-columns: 120px 1fr 150px;
     align-items: center;
+    gap: 30px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 720px) {
+    .profile {
+        display: flex;
+        flex-direction: column;
+        padding: 42px 19px 36px;
+    }
 }
