--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -20,6 +20,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 550px) {
     .popup__close {
+        background-image: url(../../../images/popup__close320px.svg);
         width: 20px;
         height: 20px;
         right: 0;
