--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -6,10 +6,13 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
+    padding: 0;
     text-align: center;
     color: #FFFFFF;
     cursor: pointer;
+    border: none;
     transition: all 1s ease;
+    border-radius: 2px;
 }
 
 .popup__save:hover {
