--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,6 @@
 @import url(../blocks/popup/__name/popup__name.css);
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url();
+@import url(../blocks/popup/_opened/popup_opened.css);
 @import url();
 @import url();
