--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -8,6 +8,9 @@
     padding: 0;
     grid-column: 1/1;
     grid-row: -1/2;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (min-width: 320px) and (max-width: 420px) {
