--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -15,7 +15,7 @@
 }
 
 .popup__close:hover {
-    opacity: 0.6
+    opacity: 0.6;
 }
 
 @media screen and (min-width: 320px) and (max-width: 550px) {
