--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,3 +6,10 @@
     margin: 0;
     color: #545454;
 }
+
+@media screen and (min-width: 320px) and (max-width: 420px) {
+    .footer__copyright {
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
