--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -13,6 +13,7 @@
     border: none;
     transition: all 1s ease;
     border-radius: 2px;
+    margin-top: 18px;
 }
 
 .popup__save:hover {
@@ -23,5 +24,8 @@
     .popup__save {
         width: 100%;
         height: 46px;
+        font-size: 14px;
+        line-height: 17px;
+        margin-top: 15px;
     }
 }
