--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
     width: 358px;
-    margin: 0;
+    margin:0 0 50px;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
@@ -12,5 +12,6 @@
         width: 238px;
         font-size: 18px;
         line-height: 22px;
+        margin-bottom: 75px;
     }
 }
