--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -5,7 +5,7 @@
     cursor: pointer;
     transition: all 1s ease;
     border-radius: 2px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
     border: 2px solid #FFFFFF;
     background-repeat: no-repeat;
     background-position: center;
@@ -17,6 +17,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 720px) {
     .profile__button-add {
+        background-image: url(../../../images/button-add_320px.svg);
         width: 100%;
     }
 }
