--- a/blocks/profile/__button-editor/profile__button-editor.css
+++ b/blocks/profile/__button-editor/profile__button-editor.css
@@ -1,5 +1,5 @@
 .profile__button-editor {
-    background-color: black;
+    background: rgba(0, 0, 0, 0);
     background-image: url(../../../images/button-editor.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -11,6 +11,7 @@
     grid-column: 2/-1;
     grid-row: 1/1;
     transition: all 1s ease;
+    margin-bottom: 7px;
 }
 
 .profile__button-editor:hover {
