--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,6 +3,15 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    gap: 16px 18px;
-    align-items: baseline;
+    gap: 11px 18px;
+    align-items: end;
+    grid-column: 2/2;
+    grid-row: 1/1;
+}
+
+@media screen and (min-width: 320px) and (max-width: 420px) {
+    .profile__info {
+        gap: 8px 10px;
+        margin: 25px 0 31px 28px;
+    }
 }
