--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -7,7 +7,7 @@
     margin: 0;
     padding: 0;
     grid-column: 1/1;
-    grid-row: -1/2;
+    grid-row: 2/2;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -15,9 +15,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 420px) {
     .profile__subtitle {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: normal;
+        max-width: 282px;
         font-size: 14px;
         line-height: 17px;
         text-align: center;
