--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -12,6 +12,7 @@
     .profile {
         display: flex;
         flex-direction: column;
-        padding: 42px 19px 36px;
+        padding: 42px 0 36px;
+        gap: 0px;
     }
 }
