--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,6 +1,10 @@
 .element__like {
-    max-width: 22px;
-    max-height: 19px;
+    width: 22px;
+    height: 19px;
+    background-image: url(../../../images/laik.svg);
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    padding: 0;
     transition: all 1s ease;
     cursor: pointer;
 }
