--- a/pages/index.css
+++ b/pages/index.css
@@ -28,3 +28,9 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__containers/popup__containers.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__jpg/popup__jpg.css);
+@import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/popup/_opacity/popup_opacity.css);
