--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__save {
+.popup__button {
     background: black;
     width: 100%;
     height: 50px;
@@ -13,19 +13,17 @@
     border: none;
     transition: all 1s ease;
     border-radius: 2px;
-    margin-top: 18px;
 }
 
-.popup__save:hover {
+.popup__button:hover {
     opacity: 0.8;
 }
 
 @media screen and (min-width: 320px) and (max-width: 550px) {
-    .popup__save {
+    .popup__button {
         width: 100%;
         height: 46px;
         font-size: 14px;
         line-height: 17px;
-        margin-top: 15px;
     }
 }
