--- a/pages/index.css
+++ b/pages/index.css
@@ -23,14 +23,20 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__containers/popup__containers.css);
-@import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__jpg/popup__jpg.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/popup/_opacity/popup_opacity.css);
+@import url(../blocks/popup/__overlay/popup__overlay.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__error/form__error.css);
+@import url(../blocks/form/__error/_visible/form__error_visible.css);
+@import url(../blocks/form/__input/_error/form__input_error.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
