--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -40,3 +40,4 @@
 @import url(../blocks/form/__error/_visible/form__error_visible.css);
 @import url(../blocks/form/__input/_error/form__input_error.css);
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/elements/__list/elements__list.css);
