--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -41,3 +41,8 @@
 @import url(../blocks/form/__input/_error/form__input_error.css);
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(../blocks/elements/__list/elements__list.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+@import url(../blocks/profile/__overlay/profile__overlay.css);
+@import url(../blocks/element/likes/element__likes.css);
+@import url(../blocks/element/likes/__like-counter/element__like-counter.css);
+@import url(../blocks/element/__delete/_hidden/element__delete_hidden.css);
