--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 .header{border-bottom:1px solid rgba(84,84,84,.7);margin:0 auto;max-width:880px;padding-bottom:39px}@media screen and (min-width:320px) and (max-width:920px){.header{padding-bottom:28.6px;padding-left:27px}}
 .header__logo{max-height:33px;max-width:142px}@media screen and (min-width:320px) and (max-width:420px){.header__logo{max-height:24.4px;max-width:103.74px}}
 .profile{align-items:center;display:grid;gap:30px;grid-template-columns:120px 1fr 150px;margin:0 auto;max-width:880px;padding:40px 0 51px}@media screen and (min-width:320px) and (max-width:720px){.profile{display:flex;flex-direction:column;gap:0;padding:42px 0 36px}}
-.profile__avatar{height:100%;-o-object-fit:cover;object-fit:cover;width:100%}
+.profile__avatar{height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
 .profile__button-add{background-color:transparent;background-image:url(images/button-add.bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;cursor:pointer;height:50px;transition:all 1s ease;width:150px}.profile__button-add:hover{opacity:.6}@media screen and (min-width:320px) and (max-width:720px){.profile__button-add{background-image:url(images/button-add_320px.d5d6f8af0577b9c95ee4.svg);width:100%}}
 .profile__button-editor{background:transparent;background-image:url(images/button-editor.6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;box-sizing:border-box;cursor:pointer;grid-column:2/-1;grid-row:1/1;height:24px;margin-bottom:7px;transition:all 1s ease;width:24px}.profile__button-editor:hover{opacity:.6}@media screen and (min-width:320px) and (max-width:420px){.profile__button-editor{height:18px;width:18px}}
 .profile__info{align-items:end;display:grid;gap:11px 18px;grid-column:2/2;grid-row:1/1;grid-template-columns:1fr;grid-template-rows:1fr;max-width:336px}@media screen and (min-width:320px) and (max-width:720px){.profile__info{gap:8px 10px;margin:25px 0 31px 28px}}
@@ -43,4 +43,7 @@
 .elements__list{display:grid;gap:20px 17px;grid-template-columns:repeat(auto-fit,minmax(282px,1fr));margin:0 auto;max-width:880px;padding:0}@media screen and (min-width:320px) and (max-width:620px){.elements__list{gap:20px}}
 .profile__avatar-container{border-radius:50%;max-height:120px;max-width:120px;overflow:hidden;position:relative}
 .profile__overlay{background-color:#000;border-radius:50%;bottom:0;cursor:pointer;left:0;opacity:0;position:absolute;right:0;top:0;transition:all .5s ease}.profile__overlay:hover{opacity:.8}.profile__overlay:before{background:url(images/button-avatar.a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;bottom:0;content:"";left:0;position:absolute;right:0;top:0}
+.element__likes{display:flex;flex-direction:column}
+.element__like-counter{margin-top:3px;text-align:center}
+.element__delete_hidden{visibility:hidden}
 
